fixes center-aligned topic titles when no options are present

--- a/datausa/assets/scss/elements/_profile.scss
+++ b/datausa/assets/scss/elements/_profile.scss
@@ -350,6 +350,7 @@ body.profile, body.map, body.story {
     h2 {
       @include flex();
       @include align-items(flex-start);
+      @include justify(flex-start);
       font-family: $pathway;
       font-size: 30px;
       font-weight: 400;
